# kiitos-tracker

./: .gitignore  README.md  annotation.py  cnn_ocr.py  counts_widget.py  game.ui  game_logic.py  kiitos-373403-1a4b3524c88e.json  main.py  main_qt.py  ocr.py  pyproject.toml  test_inference.py  test_inference_live.py  test_maskrcnn_inference.py  test_maskrcnn_live.py  tracking_and_detection.py  ui.py  video_capture.py
scripts/: coco_to_yolo.py  main.py
src/kiitos/: annotate.py  capture_worker.py  card_detector_widget.py  cnn_ocr.py  counts_widget.py  draggable_bbox.py  game.ui  game_logic.py  generate_trie.py  image_widget.py  kiitos_agent.py  kiitos_tracker.py  main.py  next_round_dialog.py  settings.ui  settings_dialog.py  tracking.py  ui.py  upload_for_labeling.py  video_capture.py
tests/: test_inference_live.py  test_labelbox.py  test_upload_for_labeling.py
