[project]
name = "kiitos"
version = "0.1.0"
description = "Live card counter for Kiitos card game"
authors = [
    { name = "Andrea Sipos", email = "" },
    { name = "Peter Mitrano", email = "" },
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "black>=25.1.0",
    "labelbox[data]>=6.9.0",
    "nltk>=3.9.1",
    "pyqt5>=5.15.11",
    "rerun-sdk>=0.22.1",
    "torch>=2.6.0",
    "tqdm>=4.67.1",
    "ultralytics>=8.3.98",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
